--- a/LM.WpfClient/App.xaml
+++ b/LM.WpfClient/App.xaml
@@ -1,5 +1,8 @@
 <Application x:Class="LM.WpfClient.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
-  <Application.Resources>
-    <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:LM.WpfClient.ViewModel" />
-  </Application.Resources>
+    <Application.Resources>
+       
+        <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:LM.WpfClient.ViewModel" />
+        <!--<ResourceDictionary  x:Key="Locator1" Source="pack://application:,,,/Fluent;Component/Themes/Office2010/Black.xaml" />-->
+    </Application.Resources>
+
 </Application>
